--- a/AUTHORS
+++ b/AUTHORS
@@ -4,3 +4,4 @@ software are (and/or have been):
     * Krzysztof Płocharz <qreesp@gmail.com>
     * Łukasz Rekucki <lrekucki@gmail.com>
     * Marek Stępniowski <marek@stepniowski.com>
+    * bernardpaulus https://github.com/bernardpaulus
