--- a/AUTHORS
+++ b/AUTHORS
@@ -4,3 +4,17 @@ software are (and/or have been):
     * Krzysztof Płocharz <qreesp@gmail.com>
     * Łukasz Rekucki <lrekucki@gmail.com>
     * Marek Stępniowski <marek@stepniowski.com>
+
+English Translators
+-------------------
+
+    * KatarzynaT-B https://github.com/KatarzynaT-B
+    * Piotr Betkier https://github.com/pbetkier
+    * Jakub Bożanowski https://github.com/jbozanowski
+    * Sarah Guermond https://github.com/sguermond
+    * bernardpaulus https://github.com/bernardpaulus
+
+French Translators
+------------------
+
+    * Rémy Hubscher <rhubscher@mozilla.com>
