--- a/AUTHORS
+++ b/AUTHORS
@@ -18,3 +18,6 @@ French Translators
 ------------------
 
     * Rémy Hubscher <rhubscher@mozilla.com>
+    * Alexis Metaireau <alexis@mozilla.com>
+    * Stéphanie Ouillon <stephouillon@mozilla.com>
+    * Florian Strzelecki <florian.strzelecki@gmail.com>
